[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "konserteristockholm"
version = "0.0.1"
authors = [
  { name="Joakim Loxdal", email="loxdal@proton.me" },
]
description = "Hitta konserter i Stockholm"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/mrkickling/konserteristockholm"
Issues = "https://github.com/mrkickling/konserteristockholm"

[project.scripts]
scrape_concerts = "concert_scraper.scraper:main"